add mypy to travis and fix inits

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,4 @@ install:
 scripts:
     - find . -iname '*.py' | xargs flake8 --max-line-length=100 --show-source
     - find . -iname '*.py' | xargs pylint --max-line-length=100 --disable=invalid-name,missing-docstring,global-statement,too-many-lines,R --enable=simplifiable-if-statement,redefined-variable-type
+    - find . -iname '*.py' | xargs mypy --ignore-missing-imports
